--- a/main.html
+++ b/main.html
@@ -7,7 +7,23 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<form method="post">
+		<div><label for="name">Name* <input id="name" type="text" required></label></div>
+		<div><label for="email">Email* <input id="email" type="email" required></label></div>
+		<div><label>Gender*</label>
+		<label for="gender">Male <input type="radio" name="gender" required></label>
+		<label for="gender">Female <input type="radio" name="gender" required></label></div>
+		<div><label for="cars">Car Brands 
+		<select id="cars">
+			<option>BMW</option>
+			<option>Audi</option>
+			<option>Mercedez</option>
+		</select> </label></div>
+		<div><label for="carage">Car Age* <input id="carage" type="number" required></label></div>
+		<div><label for="dop">DOB* <input id="dop" type="date" required></label></div>
+        <div><label for="password">Password* <input id="password" type="password" required></label></div>
+		<button type="submit">submit</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
