--- a/main.html
+++ b/main.html
@@ -19,8 +19,8 @@
 			<option>Audi</option>
 			<option>Mercedez</option>
 		</select> </label></div>
-		<div><label for="carage">Car Age* <input id="carage" type="number" required></label></div>
-		<div><label for="dop">DOB* <input id="dop" type="date" required></label></div>
+		<div><label for="age">Car Age* <input id="age" type="number" required></label></div>
+		<div><label for="dob">DOB* <input id="dob" type="date" required></label></div>
         <div><label for="password">Password* <input id="password" type="password" required></label></div>
 		<button type="submit">submit</button>
 	</form>
